# scraper

./: README.md  project.toml  pyproject.toml
scraper/: app.py  scrape.py
