[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Hunt site scraper + API"
authors = ["Anna Glasgall <glasgall@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.29.1"
Flask = "^2.2.2"
Flask-HTTPAuth = "^4.7.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
